--- a/package.json
+++ b/package.json
@@ -2,19 +2,42 @@
   "name": "video-dl",
   "version": "0.1.0",
   "private": true,
+  "description": "<your project description>",
+  "author": "Andrew Huang",
+  "build": {
+    "appId": "<com.video-dl>"
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "electron": "^10.1.4",
+    "electron-builder": "^22.9.1",
+    "electron-is-dev": "^1.2.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
+    "typescript": "^4.0.3",
+    "wait-on": "^5.2.0",
+    "youtube-dl": "https://github.com/andrewcyhuang/node-youtube-dl.git"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "npm run react-build && electron-builder --publish=always",
+    "build": "npm run react-build && npm run electron-build",
+    "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
