--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "video-dl",
+  "name": "video-downloader",
   "version": "0.1.0",
   "private": true,
   "description": "<your project description>",
