--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@rescripts/cli": "0.0.14",
+    "@rescripts/rescript-env": "0.0.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -25,19 +27,20 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "typescript": "^4.0.3",
     "wait-on": "^5.2.0",
     "youtube-dl": "https://github.com/andrewcyhuang/node-youtube-dl.git"
   },
   "scripts": {
-    "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
-    "react-test": "react-scripts test --env=jsdom",
+    "start": "rescripts start",
+    "build": "rescripts build",
+    "test": "rescripts test",
     "react-eject": "react-scripts eject",
-    "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder --publish=always",
-    "build": "npm run react-build && npm run electron-build",
-    "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-builder": "electron-builder",
+    "electron-release": "npm run build && electron-builder --publish=always",
+    "electron-build": "npm run build && npm run electron-builder",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-thunk": "^2.3.0"
   }
 }
